# practical-ml-vision-book-ja

./: .gitignore  COMMAND.md  pyproject.toml
02_ml_models/: 02b_neural_network.ipynb  train_set.csv
