[project]
name = "django_project"
version = "0.1.0"
description = "django project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab==4.4.5",
    "matplotlib==3.10.5",
    "tensorflow-macos==2.16.2",
    "tensorflow-metal==1.2.0",
    "tensorflow-hub==0.16.1",
    "google-cloud-storage==3.2.0",
]

[tool.uv]
link-mode = "copy"
dev-dependencies = [
    "ruff==0.12.2",
    "pytest==8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
